[project]
name = "minecraft-agent-reflex"
version = "1.0.0"
description = "Cloudflare Worker Agent for Minecraft MineWright - Reflex Agent with Durable Objects"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "MineWright Team", email = "dev@minewright.ai" }
]
keywords = ["minecraft", "ai", "agent", "cloudflare", "workers", "durable-objects"]

dependencies = [
    # Cloudflare Workers Python SDK
    "cloudflare-workers>=3.0.0",

    # HTTP client
    "httpx>=0.27.0",

    # JSON handling
    "orjson>=3.10.0",

    # Logging
    "structlog>=24.1.0",

    # Validation
    "pydantic>=2.6.0",

    # Date/time handling
    "python-dateutil>=2.9.0",

    # Async support
    "anyio>=4.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "wrangler>=3.0.0",
]

test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
